--- a/package.xml
+++ b/package.xml
@@ -59,8 +59,8 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
 
-  <build_depend>message_generation</build_depend>
-  <build_export_depend>message_generation</build_export_depend>
+  <build_depend>message_runtime</build_depend>
+  <build_export_depend>message_runtime</build_export_depend>
 
   <build_depend>tcp_client</build_depend>
   <build_export_depend>tcp_client</build_export_depend>
